external-crates/move/crates/move-compiler/tests/move_check/unit_test/multiple_errors@unit_test.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/multiple_errors.move:16:7
   │
16 │     #[test(_a=Foo)]
   │       ^^^^^^^^^^^^
   │       │
   │       Arguments are no longer supported in `#[test]` attributes
   │       Ignoring these arguments

warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/multiple_errors.move:21:7
   │
20 │     #[test]
   │       ---- Previously annotated here
21 │     #[test]
   │       ^^^^ function annotated with duplicate mode 'test'
   │
   = Attributes '#[test]' and '#[random_test]' implicitly specify '#[mode(test)]'

error[E10001]: invalid duplicate attribute
   ┌─ tests/move_check/unit_test/multiple_errors.move:21:7
   │
20 │     #[test]
   │       ---- Attribute previously given here
21 │     #[test]
   │       ^^^^ Duplicate attribute 'test' attached to the same item

warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/multiple_errors.move:26:7
   │
25 │     #[test]
   │       ---- Previously annotated here
26 │     #[test_only]
   │       ^^^^^^^^^ function annotated with duplicate mode 'test'
   │
   = Attributes '#[test]' and '#[random_test]' implicitly specify '#[mode(test)]'

warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/multiple_errors.move:31:5
   │
31 │     public fun f(_x: u64) { }
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid test function
   │
   = Test functions with arguments have been deprecated
   = If you would like to test functions with random inputs, consider using '#[rand_test]' instead

error[E10001]: invalid duplicate attribute
   ┌─ tests/move_check/unit_test/multiple_errors.move:36:7
   │
35 │     #[expected_failure]
   │       ---------------- Attribute previously given here
36 │     #[expected_failure]
   │       ^^^^^^^^^^^^^^^^ Duplicate attribute 'expected_failure' attached to the same item
